--- a/step12_grant_iam_policy_to_resources/package.json
+++ b/step12_grant_iam_policy_to_resources/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "step04_appsync_lambda_dynamodb_stack2",
+  "name": "step12_grant_iam_policy_to_resources",
   "version": "0.1.0",
   "bin": {
-    "step04_appsync_lambda_dynamodb_stack2": "bin/step04_appsync_lambda_dynamodb_stack2.js"
+    "step12_grant_iam_policy_to_resources": "bin/step12_grant_iam_policy_to_resources.js"
   },
   "scripts": {
     "build": "tsc",
@@ -12,17 +12,15 @@
   },
   "devDependencies": {
     "@types/jest": "^29.5.4",
-    "@types/node": "^20.5.3",
-    "aws-cdk": "2.93.0",
-    "jest": "^29.6.3",
+    "@types/node": "20.5.7",
+    "jest": "^29.6.4",
     "ts-jest": "^29.1.1",
+    "aws-cdk": "2.94.0",
     "ts-node": "^10.9.1",
-    "typescript": "~5.1.6"
+    "typescript": "~5.2.2"
   },
   "dependencies": {
-    "@aws-cdk/core": "^1.204.0",
-    "aws-cdk-lib": "2.93.0",
-    "aws-sdk": "^2.1450.0",
+    "aws-cdk-lib": "2.94.0",
     "constructs": "^10.0.0",
     "source-map-support": "^0.5.21"
   }
